# argile

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: auth.rs  hello.rs  mod.rs
frontend/: .env.example  README.md  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/app/: index.tsx  provider.tsx  router.tsx
frontend/src/app/routes/: landing.tsx  not-found.tsx
frontend/src/app/routes/app/: root.tsx
frontend/src/app/routes/auth/: login.tsx
frontend/src/components/: theme-toggle.tsx
frontend/src/components/layouts/: auth-layout.tsx  main-layout.tsx
frontend/src/components/ui/: navbar.tsx  navigation-menu.tsx
frontend/src/config/: env.ts  paths.ts
frontend/src/features/auth/components/: login-form.tsx
frontend/src/lib/: api-client.ts  auth.tsx  react-query.ts
frontend/src/types/: api.ts
