[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = "0.4.41"
dotenv = "0.15.0"
futures-util = { version = "0.3.31", default-features = false, features = [
	"sink",
	"std",
] }
headers = "0.4.1"
jsonwebtoken = "9.3.1"
notify = "8.1.0"
pam = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
tokio-tungstenite = "0.27.0"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
